--- a/index.html
+++ b/index.html
@@ -2363,7 +2363,7 @@
                                     React.createElement('ul', { className: 'ml-4 mt-1 space-y-1' },
                                         React.createElement('li', { className: 'flex items-start' },
                                             React.createElement('span', { className: 'text-[var(--accent-color)] mr-2' }, '•'),
-                                            'API 链接：如 https://generativelanguage.googleapis.com/v1beta'
+                                            'API 链接：详情见API兼容性说明部分'
                                         ),
                                         React.createElement('li', { className: 'flex items-start' },
                                             React.createElement('span', { className: 'text-[var(--accent-color)] mr-2' }, '•'),
@@ -2613,7 +2613,7 @@
                                         ),
                                         React.createElement('li', { className: 'flex items-start' },
                                             React.createElement('span', { className: 'text-[var(--accent-color)] font-bold mr-2 min-w-[1rem]' }, '2.'),
-                                            React.createElement('div', null, '点击底部工具栏的分享图标 ', React.createElement('i', { className: 'fa-solid fa-share text-xs' }))
+                                            React.createElement('div', null, '点击底部工具栏的分享图标 ', React.createElement('i', { className: 'fa-solid fa-arrow-up-from-bracket text-xs' }))
                                         ),
                                         React.createElement('li', { className: 'flex items-start' },
                                             React.createElement('span', { className: 'text-[var(--accent-color)] font-bold mr-2 min-w-[1rem]' }, '3.'),
@@ -2642,11 +2642,11 @@
                         React.createElement('ul', { className: 'space-y-1 text-sm' },
                             React.createElement('li', { className: 'flex items-start' },
                                 React.createElement('span', { className: 'text-[var(--accent-color)] mr-2 mt-0.5' }, '•'),
-                                React.createElement('div', null, React.createElement('strong', null, 'Google Gemini API：'), React.createElement('br', null), React.createElement('code', { className: 'text-xs bg-[var(--accent-light)] text-[var(--accent-dark)] p-1 rounded' }, 'https://generativelanguage.googleapis.com/v1beta'), React.createElement('p', { className: 'text-xs text-gray-600 mt-1' }, '支持图片上传，免费额度较高，推荐个人用户使用'))
+                                React.createElement('div', null, React.createElement('strong', null, 'Google Gemini 链接格式：'), React.createElement('br', null), React.createElement('code', { className: 'text-xs bg-[var(--accent-light)] text-[var(--accent-dark)] p-1 rounded' }, 'https://generativelanguage.googleapis.com/v1beta'), React.createElement('p', { className: 'text-xs text-gray-600 mt-1' }, '支持图片上传，免费额度较高，推荐个人用户使用'))
                             ),
                             React.createElement('li', { className: 'flex items-start' },
                                 React.createElement('span', { className: 'text-[var(--accent-color)] mr-2 mt-0.5' }, '•'),
-                                React.createElement('div', null, React.createElement('strong', null, 'OpenAI 兼容格式：'), React.createElement('br', null), React.createElement('code', { className: 'text-xs bg-[var(--accent-light)] text-[var(--accent-dark)] p-1 rounded' }, 'https://api.example.com/v1'), React.createElement('p', { className: 'text-xs text-gray-600 mt-1' }, '支持任何兼容 OpenAI Chat Completions API 的服务'))
+                                React.createElement('div', null, React.createElement('strong', null, 'OpenAI 兼容链接格式：'), React.createElement('br', null), React.createElement('code', { className: 'text-xs bg-[var(--accent-light)] text-[var(--accent-dark)] p-1 rounded' }, 'https://api.example.com/v1'), React.createElement('p', { className: 'text-xs text-gray-600 mt-1' }, '支持任何兼容 OpenAI Chat Completions API 的服务'))
                             )
                         )
                     ),
